# Plexus

./: .gitignore  README.md  SRS.md  custom_tools_test.py  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt  start_server.bat  test.html  test.py  test_async_simple.py  test_simple_ollama.py
.github/instructions/: ag-ui docs.instructions.md
agents/: agents.md
server/: __init__.py  cli.py  server.md  start.bat  start.py  test_config.py  test_imports.py  utils.py
server/agents/: basic.py  shopping_list_agent.py  user_agent.py
server/api/: __init__.py  api.md  main.py  run_dev.py
server/api/core/: __init__.py  config.py  exceptions.py  utils.py
server/api/middleware/: __init__.py  cors.py  logging.py  rate_limit.py
server/api/v0/: __init__.py
server/api/v0/routes/: __init__.py  agents.py  health.py
server/api/v0/schemas/: __init__.py  agents.py  base.py
server/tools/: add.py
src/: __init__.py
src/agent-framework/: README.md
src/communication/: README.md
src/config/: README.md
src/data-management/: README.md
src/devops/: README.md
src/integrations/: README.md
src/mcp-servers/: README.md
src/memory-systems/: README.md
src/memory-systems/conversation-memory/: README.md
src/memory-systems/graph-kb/: README.md
src/memory-systems/vector-db/: README.md
src/model-providers/: README.md
src/model_providers/: README.md  __init__.py  base_provider.py
src/model_providers/ollama/: README.md  __init__.py  base_provider.py  config.py  examples.py  provider.py  requirements.txt  setup.py  utils.py
src/security/: README.md
src/ui/: README.md
tests/: README.md  base_provider_tests.py
tests/e2e/: README.md
tests/integration/: README.md
tests/integration/model_providers/: test_ollama_integration.py
tests/unit/: README.md
ui/: package-lock.json  package.json  ui.md
ui/src/app/: globals.css  layout.tsx  page.tsx
